--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </header>
 
     <section class="search-section">
-      <input type="text" id="usernameInput" placeholder="Enter GitHub username" />
-      <button id="searchBtn">Search</button>
+      <input type="text" id="usernameInput" placeholder="Enter Famous Developer Github username" />
+      <button id="searchBtn">Search</button> 
     </section>
-
+    
     <section id="loading" class="hidden">Loading...</section>
 
     <section id="error" class="hidden"></section>
